<resources>
    <string name="app_name">camera-aims</string>
    <string name="title_activity_dashboard">DashboardActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="official_appname">SAFE KA DITO</string>
    <string name="sign_in">Please Sign-in to continue</string>
    <string name="welcome">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="forgot">Forgot Your Password?</string>
    <string name="login">Login</string>
    <string name="notRegister">Dont have account yet?</string>
    <string name="signup">Sign-up</string>
    <string name="create">Create Account</string>
    <string name="fill_up">Please fill the input below here</string>
    <string name="required">Required*</string>
    <string name="add_patient_firstname">Firstname</string>
    <string name="add_patient_lastname">Lastname</string>
    <string name="suffixes">Suffixes</string>
    <string name="alias">Alias</string>
    <string name="create_account">Create Account</string>
    <string name="sign_up">SIGN UP</string>
    <string name="continueCredentials">Please Continue your</string>
    <string name="inputHere">Credentials Here</string>
    <string name="email">Email</string>
    <string name="contact">Contact Number</string>
    <string name="first_password">First Password</string>
    <string name="second_password">Second Password</string>
    <string name="swipe_left">Swipe Left</string>
    <string name="title_activity_splash_screen">activity_splash_screen</string>
    <string name="hello_world">Hello Square World!</string>
    <string name="covid">COVID 19</string>
    <string name="covid_19_app">Covid 19 App</string>
    <string name="covid_19">COVID-19</string>
    <string name="vtracker">Vtracker</string>
    <string name="vtacker">VTracker App</string>
    <string name="get_started">Get STARTED</string>
    <string name="createAccount">Create Account</string>
    <string name="fullName">Full Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register">Sign Up</string>
    <string name="swipe_right">Swipe right to login</string>
    <string name="dashboard_search">Search...</string>
    <string name="dashboard_header">Covid Tracing app</string>
    <string name="dashboard_add_patient">Add Patient</string>
    <string name="dashboard_view_patient">View Patient</string>
    <string name="dashboard_incoming">Incoming</string>
    <string name="add_patient_fragment">Add Patient Fragment</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="view_patient_fragment">View Patient Fragment</string>
    <string name="card_two_fragment">Card Two Fragment</string>
    <string name="card_four_fragment">Card Four Fragment</string>
    <string name="card_five_fragment">Card Five Fragment</string>
    <string name="card_six_fragment">Card Six Fragment</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="dashboard_title">Patient List</string>
    <string name="otp_message">A one time password has been sent to your email</string>
    <string name="verify_otp">Verify</string>
    <string name="did_not_receive_otp">Did not receive the OTP?</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="cancel_verify_otp">Cancel</string>
    <string name="submit_email">Submit</string>
    <string name="submit_email_message">Please enter your email to receive a code</string>
    <string name="reset_password_message">Please type your new password below</string>
    <string name="otp_email">Verification OTP was send in your email</string>
    <string name="verify">VERIFY</string>
    <string name="registration_success">Success</string>
    <string name="registration_success_message">Your account has been successfully created!</string>
    <string name="invalid_otp_message">Your OTP is incorrect. Please try again</string>
    <string name="otp_expires">Sorry, your OTP were expired</string>
    <string name="OK">OK</string>
    <string name="email_exist_message">The email already exist. Please try another email.</string>
    <string name="email_exist">Email Already Exist</string>
    <string name="cancel_dialog">CANCEL</string>
    <string name="password_instructions">Password Requirements:</string>
    <string name="password_requirement_list">
        - Password must have 8 characters \n- Password must have upper &amp; lower case \n- Password must have special characters \n- Password must have digits
    </string>
    <string name="no_internet">No Internet Connection</string>
    <string name="no_internet_message">Please check your internet connection and try again</string>
    <string name="connect">Connect</string>
    <string name="wifi">WIFI</string>
    <string name="mobile_data">MOBILE DATA</string>
    <string name="maintenance">Maintenance</string>
    <string name="maintenance_description">Server is under maintenance. Please try again later</string>
    <string name="success_created">Congratulations, Your account has been successfully created!</string>
    <string name="invalid_otp_header">Username already exists</string>
    <string name="invalid_otp">Invalid OTP</string>
    <string name="register_contact">Register</string>
    <string name="fill_up_below">Please fill up the form below</string>
    <string name="as_individual">As Individual</string>
    <string name="fill_information">Please fill your basic information</string>
    <string name="take_photo">Take picture</string>
    <string name="add_patient_middle_name">Middle name</string>
    <string name="add_patient_mobile_number">Mobile number</string>
    <string name="address_and_city">Address</string>
    <string name="username_exist_message">Please try another username</string>
    <string name="username_exist">Username Already Exist</string>
    <string name="otp_expire_message">Your otp expires in</string>
    <string name="add_patient_menu">Add Patient</string>
    <string name="view_patient_menu">View Patient</string>
    <string name="add_patient_button">ADD PATIENT</string>
    <string name="add_patient_age">Age</string>
    <string name="add_patient_purpose">Purpose</string>
    <string name="add_patient_email">Email</string>
</resources>